fix: fixed whitespace being ignored in ChannelMessage

--- a/twitter-frontend/src/pages/main/content/messages/history/ChannelMessage.css
+++ b/twitter-frontend/src/pages/main/content/messages/history/ChannelMessage.css
@@ -6,6 +6,7 @@
     padding: 0.25rem;
     align-self: flex-start;
     max-width: 80%;
+    white-space: pre-line; /* fixes newlines being ignored */
 }
 
 .channel-message--from-you {
